--- a/Server/src/Server.Web/Components/Pages/Home.razor
+++ b/Server/src/Server.Web/Components/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@inherits OwningComponentBase<IUnitOfWork>
+﻿@inherits PageComponentBase<IUnitOfWork>
 
 @page "/"
 
@@ -19,6 +19,7 @@
     {
         base.OnInitialized();
         StreamedProducts = Service.ProductRepository.GetAllAsync();
+        State.LayoutClass = "layout-home";
     }
 
 }
