--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -99,7 +99,7 @@ body {
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   column-gap: 2.4rem;
   row-gap: 4rem;
 }
