--- a/styles/scss/components/_cards.scss
+++ b/styles/scss/components/_cards.scss
@@ -3,7 +3,7 @@
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
   column-gap: var.$spacing-m;
   row-gap: var.$spacing-xl;
 }
