--- a/styles/scss/layouts/_layout.scss
+++ b/styles/scss/layouts/_layout.scss
@@ -38,4 +38,8 @@
     min-height: var.$vertical-content-height;
     overflow-y: auto;
   }
+  
+  &__content-vertical--main {
+    min-height: var.$vertical-content-height-main;
+  }
 }
