--- a/Server/src/Server.Web/Components/Pages/SignUp.razor
+++ b/Server/src/Server.Web/Components/Pages/SignUp.razor
@@ -11,14 +11,14 @@
 
     @if (!ShowConfirmation)
     {
-        <EditForm class="form--auth"
+        <EditForm class="form--signup"
                   method="post"
                   Model="@SignUpModel"
                   OnValidSubmit="SignUpUser"
                   FormName="signUpForm">
             <FluentValidationValidator/>
             <ValidationSummary/>
-            <div>
+            <div class="form--signup__email">
                 <InputText type="email"
                            class="form__input"
                            placeholder="Enter your email address"
@@ -26,7 +26,7 @@
                            @bind-Value="@SignUpModel!.Email"/>
                 <label for="signUpEmail" class="form__label form__label--input">Email</label>
             </div>
-            <div>
+            <div class="form--signup__password">
                 <InputText type="password"
                            class="form__input"
                            placeholder="Enter your password"
@@ -35,7 +35,7 @@
                 <label for="signUpPassword" class="form__label form__label--input">Password</label>
             </div>
 
-            <div>
+            <div class="form--signup__confirm-password">
                 <InputText type="password"
                            class="form__input"
                            placeholder="Confirm your password"
@@ -44,14 +44,14 @@
                 <label for="signUpPasswordConfirm" class="form__label form__label--input">Confirm Password</label>
             </div>
 
-            <div>
+            <div class="form--signup__first-name">
                 <InputText class="form__input"
                            placeholder="Enter your first name"
                            id="signUpFirstName"
                            @bind-Value="@SignUpModel!.FirstName"/>
                 <label for="signUpFirstName" class="form__label form__label--input">First Name</label>
             </div>
-            <div>
+            <div class="form--signup__last-name">
                 <InputText class="form__input"
                            placeholder="Enter your last name"
                            id="signUpLastName"
@@ -59,7 +59,9 @@
                 <label for="signUpLastName" class="form__label form__label--input">Last Name</label>
             </div>
 
-            <button type="submit" class="btn btn--primary btn--md">Sign Up</button>
+            <div class="form--signup__submit">
+                <button type="submit" class="btn btn--primary btn--md">Sign Up</button>
+            </div>
         </EditForm>
     }
     else
