Make shopping cart page responsive

--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -739,12 +739,22 @@ body {
 
 .shopping-cart {
   display: grid;
-  grid-template-columns: 1fr 40rem;
-  column-gap: 20rem;
+  grid-template-columns: 1fr max-content;
+  column-gap: 12.8rem;
   grid-template-rows: repeat(3, min-content) 1fr;
   row-gap: 4rem;
-  height: 100%;
   margin: 6.4rem 0;
+}
+@media only screen and (max-width: 1200px) {
+  .shopping-cart {
+    column-gap: 8rem;
+  }
+}
+@media only screen and (max-width: 925px) {
+  .shopping-cart {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .cart-title {
@@ -777,14 +787,20 @@ body {
 .cart-item__product-name {
   font-size: 1.4rem;
   margin-left: 1.6rem;
+  display: inline-block;
+  width: 50%;
 }
 .cart-item__product-price {
   font-size: 1.2rem;
-  margin-left: 4.8rem;
 }
 .cart-item__product-quantity {
   margin-left: auto;
   margin-right: 3.2rem;
+}
+@media only screen and (max-width: 925px) {
+  .cart-item {
+    margin: 0 1rem;
+  }
 }
 
 .cart-summary {
