Change cart control size on product cards to medium.

--- a/Client/src/Client.Components/Cart/CartControls.razor
+++ b/Client/src/Client.Components/Cart/CartControls.razor
@@ -44,7 +44,7 @@
         var quantityClasses = Size switch
         {
             ControlsSize.Small => "quantity quantity--sm",
-            ControlsSize.Medium => "quantity quantity--lg",
+            ControlsSize.Medium => "quantity quantity--md",
             ControlsSize.Large => "quantity quantity--lg",
             _ => throw new ArgumentOutOfRangeException()
         };
