--- a/styles/scss/layouts/_layout.scss
+++ b/styles/scss/layouts/_layout.scss
@@ -13,6 +13,8 @@
   [topbar-end nav-start] var.$navbar-height
   [navigation-end nav-end content-start] 1fr [content-end];
     min-height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
   }
 
   &--admin {
@@ -22,6 +24,10 @@
     //padding-bottom: var.$spacing-3xl;
   }
 
+  &--page, &--full {
+    width: 100vw;
+  }
+  
   &--page {
     @include mxn.layout-page;
   }
