--- a/styles/scss/layouts/_navigation.scss
+++ b/styles/scss/layouts/_navigation.scss
@@ -45,7 +45,7 @@
 
     display: flex;
     align-items: center;
-    gap: 2.8rem;
+    gap: clamp(8px, 2vw, 28px);
   }
 }
 
@@ -88,6 +88,7 @@
       transform: scaleY(0);
       transform-origin: top;
       transition: transform 350ms ease-in-out;
+      z-index: 2000;
     }
   }
 
