--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -25,16 +25,13 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-}
-@media only screen and (max-width: 1200px) {
-  html {
-    font-size: 56.25%;
+  /*@include mxn.media(tab-land) {
+    font-size: 56.25%; // set 1 rem = 9px
   }
-}
-@media only screen and (max-width: 925px) {
-  html {
-    font-size: 50%;
-  }
+
+  @include mxn.media(tab-port) {
+    font-size: 50%; // set 1 rem = 8px
+  }*/
 }
 
 body {
@@ -620,8 +617,8 @@ body {
   grid-template-rows: [header-start] min-content [header-end content-start] 1fr [content-end];
   row-gap: 6.4rem;
 }
-.layout--page, .layout--full {
-  width: 100vw;
+.layout--page, .layout--full, .layout {
+  max-width: 100vw;
 }
 .layout--page {
   grid-column: page;
@@ -751,8 +748,8 @@ body {
 
 .shopping-cart {
   display: grid;
-  grid-template-columns: 1fr max-content;
-  column-gap: 12.8rem;
+  grid-template-columns: 2fr minmax(256px, 1fr);
+  column-gap: 9.6rem;
   grid-template-rows: repeat(3, min-content) 1fr;
   row-gap: 4rem;
   margin: 6.4rem 0;
@@ -767,6 +764,10 @@ body {
     display: flex;
     flex-direction: column;
   }
+}
+
+.shopping-cart, .cart-item-display, .cart-summary {
+  container-type: inline-size;
 }
 
 .cart-title {
@@ -786,28 +787,82 @@ body {
 }
 
 .cart-item {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-areas: "img name price quantity";
+  grid-template-columns: minmax(112px, 1fr) minmax(20ch, 2fr) 2fr min-content;
   border-radius: 2rem;
   overflow: hidden;
   box-shadow: 0 0.25rem 1.25rem rgba(0, 0, 0, 0.15);
 }
+@container (inline-size < 768px) {
+  .cart-item {
+    grid-template-areas: "img name name" "img price quantity";
+    grid-template-columns: 128px max-content 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 4rem;
+  }
+}
+@container (inline-size < 496px) {
+  .cart-item {
+    grid-template-areas: "img name" "img price" "img quantity";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, min-content);
+    row-gap: 3.2rem;
+    padding: 24px;
+  }
+}
 .cart-item__product-img {
-  display: inline-block;
-  width: 8rem;
+  grid-area: img;
+  display: block;
+  width: 100%;
+  aspect-ratio: 1;
+}
+@container (inline-size < 496px) {
+  .cart-item__product-img {
+    aspect-ratio: unset;
+    object-fit: cover;
+    object-position: center;
+  }
 }
 .cart-item__product-name {
-  font-size: 1.4rem;
-  margin-left: 1.6rem;
+  grid-area: name;
+  font-size: 2rem;
   display: inline-block;
-  width: 50%;
+  margin-left: 2.4rem;
+  font-weight: 400;
+}
+@container (inline-size < 768px) {
+  .cart-item__product-name {
+    margin-left: 0;
+  }
 }
 .cart-item__product-price {
-  font-size: 1.2rem;
+  grid-area: price;
+  font-size: 2.4rem;
+  font-weight: 600;
+}
+@container (inline-size < 768px) {
+  .cart-item__product-price {
+    justify-self: start;
+  }
 }
 .cart-item__product-quantity {
-  margin-left: auto;
-  margin-right: 3.2rem;
+  grid-area: quantity;
+  margin-right: 4rem;
+}
+@container (inline-size < 768px) {
+  .cart-item__product-quantity {
+    justify-self: end;
+  }
+}
+@container (inline-size < 496px) {
+  .cart-item__product-quantity {
+    margin-right: 0;
+    justify-self: start;
+  }
+}
+.cart-item__product-name, .cart-item__product-price, .cart-item__product-quantity {
+  align-self: center;
 }
 @media only screen and (max-width: 925px) {
   .cart-item {
@@ -821,14 +876,30 @@ body {
   background-color: #f5f5f5;
   padding: 3.2rem;
   border-radius: 2rem;
+  box-shadow: 0 0.25rem 1.25rem rgba(0, 0, 0, 0.15);
 }
 .cart-summary__title {
-  font-size: 1.8rem;
-  margin-bottom: 1.6rem;
+  font-size: 3.6rem;
+  margin-bottom: 3.2rem;
+  font-weight: 300;
+}
+.cart-summary__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
 }
 .cart-summary__item {
-  font-size: 1.4rem;
-  margin-bottom: 1.6rem;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.6rem;
+}
+.cart-summary__item span:first-of-type {
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+.cart-summary__item span:last-of-type {
+  font-size: 2rem;
 }
 
 .cart-btn {
