--- a/styles/scss/components/_shopping-cart.scss
+++ b/styles/scss/components/_shopping-cart.scss
@@ -3,23 +3,25 @@
 
 .shopping-cart {
   display: grid;
-  grid-template-columns:  1fr max-content;
-  column-gap: var.$spacing-6xl;
+  grid-template-columns:  2fr minmax(256px, 1fr);
+  column-gap: var.$spacing-5xl;
   grid-template-rows:  repeat(3, min-content) 1fr;
   row-gap: var.$spacing-xl;
 
   margin: var.$spacing-3xl 0;
-  
-  @include mxn.media(tab-land)
-  {
+
+  @include mxn.media(tab-land) {
     column-gap: var.$spacing-4xl;
   }
-  
-  @include mxn.media(tab-port)
-  {
+
+  @include mxn.media(tab-port) {
     display: flex;
     flex-direction: column;
   }
+}
+
+.shopping-cart, .cart-item-display, .cart-summary {
+  container-type: inline-size;
 }
 
 .cart-title {
@@ -28,13 +30,13 @@
   align-self: center;
 
   display: inline-block;
-  
+
   font-size: var.$fs-5xl;
 }
 
 .cart-item-display {
   grid-column: 1 / 2;
-  grid-row:  2 / 4;
+  grid-row: 2 / 4;
 
   display: flex;
   flex-direction: column;
@@ -42,35 +44,97 @@
 }
 
 .cart-item {
-  display: flex;
+  $container-breakpoint-md: 768px;
+  $container-breakpoint-sm: 496px;
+
+  display: grid;
+  grid-template-areas: "img name price quantity";
+  grid-template-columns: minmax(112px, 1fr) minmax(20ch, 2fr) 2fr min-content;
   //gap: var.$spacing-l;
-  align-items: center;
-  
+
+  @container (inline-size < #{$container-breakpoint-md}) {
+    grid-template-areas:
+            "img name name"
+            "img price quantity";
+    grid-template-columns: 128px max-content 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: var.$spacing-xl;
+  }
+
+  @container (inline-size < #{$container-breakpoint-sm}) {
+    grid-template-areas: 
+            "img name"
+            "img price"
+            "img quantity";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, min-content);
+    row-gap: var.$spacing-l;
+
+    padding: 24px;
+  }
+
+
   border-radius: 2rem;
   overflow: hidden;
   box-shadow: 0 0.25rem 1.25rem rgba(#000, 0.15);
 
   &__product-img {
-    display: inline-block;
-    width: 8rem;
+    grid-area: img;
+
+    display: block;
+    width: 100%;
+    aspect-ratio: 1;
+
+    @container (inline-size < #{$container-breakpoint-sm}) {
+      aspect-ratio: unset;
+      object-fit: cover;
+      object-position: center;
+
+    }
   }
 
   &__product-name {
-    font-size: var.$fs-s;
-    margin-left: var.$spacing-s;
+    grid-area: name;
+
+    font-size: var.$fs-xl;
     display: inline-block;
-    width: 50%;
+    margin-left: var.$spacing-m;
+    font-weight: var.$weight-regular;
+
+    @container (inline-size < #{$container-breakpoint-md}) {
+      margin-left: 0;
+    }
   }
 
   &__product-price {
-    font-size: var.$fs-xs;
+    grid-area: price;
+    font-size: var.$fs-2xl;
+    font-weight: var.$weight-medium;
+
+    @container (inline-size < #{$container-breakpoint-md}) {
+      justify-self: start;
+    }
   }
 
   &__product-quantity {
-    margin-left: auto;
-    margin-right: var.$spacing-l;
+    grid-area: quantity;
+
+    margin-right: var.$spacing-xl;
+
+    @container (inline-size < #{$container-breakpoint-md}) {
+      justify-self: end;
+    }
+
+    @container (inline-size < #{$container-breakpoint-sm}) {
+      margin-right: 0;
+      justify-self: start;
+    }
   }
-  
+
+  &__product-name, &__product-price, &__product-quantity {
+    align-self: center;
+  }
+
   @include mxn.media(tab-port) {
     margin: 0 1rem;
   }
@@ -80,21 +144,43 @@
 .cart-summary {
   grid-column: 2 / -1;
   grid-row: 2 / 3;
-  
+
   background-color: var.$color-grey-light-1;
   padding: var.$spacing-l;
   border-radius: 2rem;
+  box-shadow: 0 0.25rem 1.25rem rgba(#000, 0.15);
+
 
   &__title {
-    font-size: var.$fs-l;
-    margin-bottom: var.$spacing-s;
+    font-size: var.$fs-4xl;
+    margin-bottom: var.$spacing-l;
+    font-weight: var.$weight-light;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: var.$spacing-s;
   }
 
   &__item {
-    font-size: var.$fs-s;
-    margin-bottom: var.$spacing-s;
+    list-style-type: none;
+    
+    display: flex;
+    justify-content: space-between;
+    font-size: var.$fs-m;
+    
+    span:first-of-type {
+      font-size: var.$fs-2xl;
+      font-weight: var.$weight-bold;
+    }
+
+    span:last-of-type {
+      font-size: var.$fs-xl;
+      
+    }
   }
-  
+
 }
 
 .cart-btn {
@@ -109,10 +195,10 @@
   grid-column: 1 / 2;
   grid-row: 4 / -1;
   align-self: start;
-  
+
   display: flex;
-  
+
   &__empty-btn {
-    
+
   }
 }
