Fix topbar icon styling and as aligment for small screen sizes.

--- a/styles/scss/components/_search.scss
+++ b/styles/scss/components/_search.scss
@@ -96,6 +96,15 @@
   
   &__open > &__icon {
     fill: var.$color-grey-light-1;
+    height: 2.4rem;
+    aspect-ratio: 1;
+  }
+  
+  &__checkbox:not(:checked) ~ &__open {
+    @include mxn.media(phone-lg) {
+      margin-left: auto;
+      margin-right: max(8px, 2vw);
+    }
   }
   
   &__checkbox:not(:checked) ~ &__open, &__checkbox:checked ~ &__close {
