--- a/Server/src/Server.Web/wwwroot/css/dev/main.css
+++ b/Server/src/Server.Web/wwwroot/css/dev/main.css
@@ -726,6 +726,14 @@ body {
 }
 .search__open > .search__icon {
   fill: #f5f5f5;
+  height: 2.4rem;
+  aspect-ratio: 1;
+}
+@media only screen and (max-width: 725px) {
+  .search__checkbox:not(:checked) ~ .search__open {
+    margin-left: auto;
+    margin-right: max(8px, 2vw);
+  }
 }
 @media only screen and (max-width: 725px) {
   .search__checkbox:not(:checked) ~ .search__open, .search__checkbox:checked ~ .search__close {
@@ -932,7 +940,7 @@ body {
   border-radius: 10px;
   transition: all 200ms ease-in-out;
 }
-@media only screen and (max-width: 610px) {
+@media only screen and (max-width: 925px) {
   .store-btn {
     grid-template-columns: max-content;
   }
@@ -959,7 +967,7 @@ body {
   color: #d6d6d6;
   transition: all 200ms ease-in-out;
 }
-@media only screen and (max-width: 610px) {
+@media only screen and (max-width: 925px) {
   .store-btn__heading, .store-btn__location {
     display: none;
   }
@@ -971,7 +979,7 @@ body {
   aspect-ratio: 1/1;
   fill: #d6d6d6;
 }
-@media only screen and (max-width: 610px) {
+@media only screen and (max-width: 925px) {
   .store-btn__chevron {
     display: none;
   }
@@ -1249,7 +1257,6 @@ body {
   aspect-ratio: 1/1;
   fill: #d6d6d6;
 }
-
 .nav {
   grid-column: page-start/page-end;
   grid-row: nav-start/nav-end;
