--- a/styles/scss/layouts/_navigation.scss
+++ b/styles/scss/layouts/_navigation.scss
@@ -61,6 +61,10 @@
     width: 3.6rem;
     aspect-ratio: 1 / 1;
     fill: var.$color-grey-light-2;
+    
+    @include mxn.media(tab-port) {
+      
+    }
   }
 }
 
