--- a/styles/scss/layouts/_navigation.scss
+++ b/styles/scss/layouts/_navigation.scss
@@ -16,7 +16,7 @@
 
   display: grid;
   grid-template-columns: subgrid;
-  
+
   position: relative;
   background-color: var.$color-primary-dark;
 
@@ -29,12 +29,11 @@
   }
 
   &__brand {
-    flex: 0 0 20rem;
     display: inline-flex;
 
-    img {
+     img {
       display: block;
-      width: 100%;
+      height: 6rem;
     }
   }
 
@@ -61,9 +60,9 @@
     width: 3.6rem;
     aspect-ratio: 1 / 1;
     fill: var.$color-grey-light-2;
-    
+
     @include mxn.media(tab-port) {
-      
+
     }
   }
 }
@@ -204,7 +203,7 @@
     height: 4rem;
     padding: .5rem;
     aspect-ratio: 1 / 1;
-    
+
     @include mxn.media(tab-port) {
       display: flex;
     }
